--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Douglas Bittencourt
-logo: /assets/img/headshot_circle.png
+logo: /assets/img/eu.jpg
 #description: text below image
 show_downloads: true
 theme: jekyll-theme-minimal
